--- a/src/main/java/chalmers/app/view/menuStyle.css
+++ b/src/main/java/chalmers/app/view/menuStyle.css
@@ -1,14 +1,49 @@
+@font-face{
+    font-family:"Baloo Bhai";
+    src: url(fonts/BalooBhai-Regular.ttf);
+    font-style: normal;
+    font-weight: 20;
+
+}
+
+.background{
+    -fx-background-image: url(images/background3.jpg);
+    -fx-background-size 30% 30%;
+}
+
+
 .whiteMenuText{
     -fx-text-fill:white;
-    -fx-font-size: 30px;
-    -fx-effect: dropshadow 10px 10px 5px; //Funkar tydligen inte men går att lösa på annat sätt!
+    -fx-font-size: 36;
+    -fx-font-family:"Baloo Bhai";
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.3, 0.0, 4);
+}
+
+.logoText{
+    -fx-text-fill:#3254CD;
+    -fx-font-size: 96;
+    -fx-font-family:"Baloo Bhai";
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.3, 0.0, 4);
+
+}
+
+.outline.logoText .text{
+    -fx-fill:lightseagreen;
+    -fx-stroke: firebrick;         //Inte listat ut hur man gör stroke
+    -fx-stroke-width:10px;
 }
 
 .menuButton{
     -fx-background-color:#3254CD;
     -fx-background-radius:10;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.3, 0.0, 4);
 }
 
 .menuButton:hover{
-    -fx-background-color:#516BC9; //färg kanske ska ändras lite
+    -fx-background-color:#4665D2;
 }
+
+.menuButton:pressed{
+    -fx-background-color:#2D4BB8;
+}
+
