--- a/src/main/java/chalmers/app/view/menu.fxml
+++ b/src/main/java/chalmers/app/view/menu.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" stylesheets="@menuStyle.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chalmers.app.controller.MenuController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" stylesheets="@menuStyle.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chalmers.app.controller.MenuController">
    <children>
       <AnchorPane layoutY="1.0" prefHeight="200.0" prefWidth="200.0" styleClass="background" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
          <children>
-            <Polygon fill="DODGERBLUE" layoutX="465.0" layoutY="133.0" points="-15.4000244140625, 40.000030517578125, 42.5999755859375, 40.000030517578125, 12.5999755859375, -11.79998779296875" stroke="BLACK" strokeType="INSIDE" />
             <Pane fx:id="menuStartButton" layoutX="250.0" layoutY="207.0" prefHeight="60.0" prefWidth="400.0" styleClass="menuButton" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="250.0">
                <children>
                   <Label alignment="CENTER" layoutX="132.0" layoutY="-2.0" prefHeight="40.0" prefWidth="137.0" styleClass="whiteMenuText" text="Start" textAlignment="CENTER">
