gjort runGame metoden, ska slipa på den imon

--- a/src/main/java/chalmers/app/view/menuStyle.css
+++ b/src/main/java/chalmers/app/view/menuStyle.css
@@ -7,8 +7,8 @@
 }
 
 .background{
-    -fx-background-image: url(images/background3.jpg);
-    -fx-background-size 30% 30%;
+    -fx-background-image: url(images/MemoryShapeBackgroundFade.PNG);
+    -fx-background-size 100% 100%;
 }
 
 
