--- a/src/main/java/chalmers/app/view/menuStyle.css
+++ b/src/main/java/chalmers/app/view/menuStyle.css
@@ -8,7 +8,7 @@
 
 .background{
     -fx-background-image: url(images/MemoryShapeBackgroundFade.PNG);
-    -fx-background-size 100% 100%;
+    -fx-background-size: 100% 100%;
 }
 
 
