--- a/src/main/resources/view/card.fxml
+++ b/src/main/resources/view/card.fxml
@@ -4,16 +4,16 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chalmers.app.controller.CardController">
+<fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane>
          <children>
             <ImageView fx:id="image" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/shapes/Group%2016-2.png" />
+                  <Image url="@images/shapes/BLUECIRCLE.jpg" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
    </children>
-</AnchorPane>
+</fx:root>
