--- a/src/main/resources/view/board.fxml
+++ b/src/main/resources/view/board.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,34 +10,46 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@menuStyle.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutY="12.0" prefHeight="576.0" prefWidth="900.0" styleClass="background">
+      <AnchorPane layoutX="-12.0" prefHeight="614.0" prefWidth="919.0" styleClass="background">
          <children>
-            <Text layoutX="101.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="logoText" text="Memory    Shape" wrappingWidth="768.22900390625" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#45aca5" height="51.0" layoutX="474.0" layoutY="90.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" width="51.0" />
-            <ImageView fitHeight="38.0" fitWidth="52.0" layoutX="6.0" pickOnBounds="true" preserveRatio="true">
+            <Text layoutX="155.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 85;" styleClass="titleText" text="Memory    Shape" wrappingWidth="768.22900390625" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#45aca5" height="45.0" layoutX="485.0" layoutY="33.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="45.0" />
+            <ImageView fitHeight="47.0" fitWidth="56.0" layoutX="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/lifes.jpg" />
+                  <Image url="@images/icons8-red-heart-96.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="38.0" fitWidth="52.0" layoutX="44.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="47.0" fitWidth="63.0" layoutX="51.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/lifes.jpg" />
+                  <Image url="@images/icons8-red-heart-96.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="38.0" fitWidth="52.0" layoutX="82.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="47.0" fitWidth="65.0" layoutX="89.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/lifes.jpg" />
+                  <Image url="@images/icons8-red-heart-96.png" />
                </image>
             </ImageView>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="14.0" layoutX="824.0" layoutY="7.0" stroke="BLACK" strokeType="INSIDE" width="56.0" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="14.0" layoutX="824.0" layoutY="31.0" stroke="BLACK" strokeType="INSIDE" width="56.0" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="14.0" layoutX="824.0" layoutY="55.0" stroke="BLACK" strokeType="INSIDE" width="56.0" />
-            <FlowPane fx:id="flowPane" layoutX="87.0" layoutY="332.0" prefHeight="230.0" prefWidth="747.0" />
-            <ImageView fitHeight="153.0" fitWidth="165.0" layoutX="359.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/Polygon%201.png" />
-               </image>
-            </ImageView>
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3357cc" height="14.0" layoutX="824.0" layoutY="7.0" stroke="BLACK" strokeType="INSIDE" styleClass="optionsButton" width="56.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3254cd" height="14.0" layoutX="824.0" layoutY="31.0" stroke="BLACK" strokeType="INSIDE" styleClass="optionsRect" width="56.0" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#3360cc" height="14.0" layoutX="824.0" layoutY="55.0" stroke="BLACK" strokeType="INSIDE" styleClass="optionsRect" width="56.0" />
+            <AnchorPane layoutX="65.0" layoutY="121.0" prefHeight="429.0" prefWidth="793.0" styleClass="boardAnchorPane">
+               <children>
+                  <AnchorPane layoutX="300.0" layoutY="21.0" prefHeight="142.0" prefWidth="179.0" styleClass="displayCard">
+                     <children>
+                        <ImageView fitHeight="129.0" fitWidth="151.0" layoutX="25.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@images/shapes/YELLOWCIRCLE.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </AnchorPane>
+                  <FlowPane fx:id="flowPane" alignment="CENTER" hgap="10.0" layoutX="3.0" layoutY="215.0" prefHeight="212.0" prefWidth="787.0" vgap="10.0">
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </FlowPane>
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
    </children>
