--- a/src/main/resources/view/card.fxml
+++ b/src/main/resources/view/card.fxml
@@ -4,13 +4,13 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<fx:root type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root stylesheets="@menuStyle.css" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane>
+      <AnchorPane styleClass="displayCard">
          <children>
-            <ImageView fx:id="image" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="image" fitHeight="100.0" fitWidth="100.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/shapes/BLUECIRCLE.jpg" />
+                  <Image url="@images/shapes/ORANGECIRCLE.png" />
                </image>
             </ImageView>
          </children>
