--- a/src/main/resources/view/menu.fxml
+++ b/src/main/resources/view/menu.fxml
@@ -3,7 +3,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" stylesheets="@menuStyle.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -53,11 +55,8 @@
                   </Label>
                </children>
             </Pane>
-            <Label layoutX="74.0" layoutY="53.0" style="-fx-text-fill: #3254CD;" styleClass="logoText" text="Memory     Shape">
-               <font>
-                  <Font name="Baloo Bhai" size="96.0" />
-               </font>
-            </Label>
+            <Text layoutX="62.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titleText" text="Memory    Shape" wrappingWidth="815.22900390625" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="51.0" layoutX="438.0" layoutY="79.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="51.0" />
          </children></AnchorPane>
    </children>
 </AnchorPane>
