--- a/src/main/resources/view/menu.fxml
+++ b/src/main/resources/view/menu.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -57,7 +58,7 @@
                   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="51.0" layoutX="748.0" layoutY="50.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="51.0" />
                   <AnchorPane layoutX="107.0" layoutY="141.0" prefHeight="432.0" prefWidth="685.0" styleClass="boardAnchorPane">
                      <children>
-                        <Pane layoutX="17.0" layoutY="14.0" prefHeight="39.0" prefWidth="669.0" styleClass="buttonMode">
+                        <Pane layoutX="17.0" layoutY="14.0" prefHeight="39.0" prefWidth="669.0" styleClass="buttonMode" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="14.0">
                            <children>
                               <Text layoutX="14.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Position">
                                  <font>
@@ -84,7 +85,11 @@
                               <Line endX="-9.72900390625" endY="-14.0" layoutX="467.0" layoutY="15.0" startX="-9.72900390625" startY="25.0" />
                            </children>
                         </Pane>
-                        <FlowPane layoutY="65.0" prefHeight="465.0" prefWidth="702.0" />
+                        <ScrollPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="60.0">
+                           <content>
+                              <FlowPane fx:id="highscore_flwPane" />
+                           </content>
+                        </ScrollPane>
                      </children>
                   </AnchorPane>
                   <ImageView fx:id="backImage" fitHeight="69.0" fitWidth="72.0" layoutX="24.0" layoutY="588.0" onMouseClicked="#backButtonPressed" pickOnBounds="true" preserveRatio="true">
