--- a/src/main/resources/view/menu.fxml
+++ b/src/main/resources/view/menu.fxml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
@@ -21,36 +16,6 @@
    <children>
       <StackPane layoutX="-3.0" prefHeight="600.0" prefWidth="900.0">
          <children>
-            <AnchorPane fx:id="soundOptionsPane" prefHeight="200.0" prefWidth="200.0" styleClass="background">
-               <children>
-                  <Text layoutX="130.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titleText" text="Sound Options!" />
-                  <Pane layoutX="164.0" layoutY="217.0" prefHeight="337.0" prefWidth="588.0" styleClass="boardAnchorPane">
-                     <children>
-                        <Slider layoutX="74.0" layoutY="122.0" majorTickUnit="10.0" prefHeight="15.0" prefWidth="440.0" showTickLabels="true" showTickMarks="true" value="10.0" />
-                        <Text fill="WHITE" layoutX="40.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Regulate the volume:">
-                           <font>
-                              <Font name="Baloo Bhai" size="18.0" />
-                           </font>
-                        </Text>
-                        <RadioButton layoutX="102.0" layoutY="189.0" mnemonicParsing="false" text="ON" textFill="WHITE">
-                           <font>
-                              <Font name="Baloo Bhai" size="14.0" />
-                           </font>
-                        </RadioButton>
-                        <RadioButton layoutX="102.0" layoutY="224.0" mnemonicParsing="false" text="OFF" textFill="WHITE">
-                           <font>
-                              <Font name="Baloo Bhai" size="14.0" />
-                           </font>
-                        </RadioButton>
-                     </children>
-                  </Pane>
-                  <ImageView fx:id="optionsBackImage" fitHeight="69.0" fitWidth="72.0" layoutX="29.0" layoutY="580.0" onMouseClicked="#backButtonPressed" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icons8-izquierda-círculo-64.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </AnchorPane>
             <AnchorPane fx:id="leaderboardAnchorPane" prefHeight="200.0" prefWidth="200.0" styleClass="background">
                <children>
                   <Text layoutX="210.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titleText" text="Highscores" wrappingWidth="563.22900390625" />
@@ -92,45 +57,27 @@
                         </ScrollPane>
                      </children>
                   </AnchorPane>
-                  <ImageView fx:id="backImage" fitHeight="69.0" fitWidth="72.0" layoutX="24.0" layoutY="588.0" onMouseClicked="#backButtonPressed" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icons8-izquierda-círculo-64.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </AnchorPane>
-            <AnchorPane fx:id="playerNameAnchorPane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: rgba(0, 0, 0, 0.65)rgba(0, 0, 0, 0.65);">
-               <children>
-                  <Pane layoutX="241.0" layoutY="197.0" prefHeight="253.0" prefWidth="456.0" style="-fx-background-color: grey; -fx-background-color: rgba(0, 0, 0, 0.45)rgba(0, 0, 0, 0.45); -fx-background-radius: 20;">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
+                  <AnchorPane layoutX="54.0" layoutY="457.0" prefHeight="200.0" prefWidth="815.0">
                      <children>
-                        <Text fill="WHITE" layoutX="34.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your name:" wrappingWidth="261.22900390625">
-                           <font>
-                              <Font name="Baloo Bhai" size="24.0" />
-                           </font>
-                        </Text>
-                        <TextField layoutX="34.0" layoutY="100.0" prefHeight="64.0" prefWidth="325.0" />
+                        <Pane layoutX="87.0" layoutY="81.0" onMouseClicked="#backButtonPressed" prefHeight="72.0" prefWidth="112.0" styleClass="backButton">
+                           <children>
+                              <Text layoutX="12.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="backForwardText" text="Back" />
+                           </children>
+                        </Pane>
                      </children>
-                  </Pane>
-                  <ImageView fitHeight="69.0" fitWidth="72.0" layoutX="24.0" layoutY="588.0" onMouseClicked="#backButtonPressed" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icons8-izquierda-círculo-64.png" />
-                     </image>
-                  </ImageView>
+                  </AnchorPane>
                </children>
             </AnchorPane>
             <AnchorPane fx:id="modeAnchorPane">
                <children>
-                  <AnchorPane layoutX="91.0" layoutY="133.0" prefHeight="432.0" prefWidth="734.0" styleClass="boardAnchorPane">
+                  <AnchorPane layoutX="91.0" layoutY="133.0" prefHeight="432.0" prefWidth="734.0" styleClass="boardAnchorPane" AnchorPane.rightAnchor="91.5">
                      <children>
-                        <Text fill="WHITE" layoutX="311.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modeText" text="Mode">
+                        <Text fill="WHITE" layoutX="304.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modeText" text="Mode">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Text>
-                        <Pane layoutX="36.0" layoutY="105.0" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
+                        <Pane fx:id="standardModeButton" layoutX="30.0" layoutY="105.0" onMouseClicked="#standardModeButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
                            <children>
                               <Text layoutX="16.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Standard ">
                                  <font>
@@ -139,7 +86,7 @@
                               </Text>
                            </children>
                         </Pane>
-                        <Pane layoutX="278.0" layoutY="105.0" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
+                        <Pane fx:id="frenzyButton" layoutX="272.5" layoutY="105.0" onMouseClicked="#frenzyButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
                            <children>
                               <Text layoutX="39.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Frenzy">
                                  <font>
@@ -148,31 +95,23 @@
                               </Text>
                            </children>
                         </Pane>
-                        <Text fill="WHITE" layoutX="300.0" layoutY="259.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modeText" text="Player">
-                           <font>
-                              <Font size="24.0" />
-                           </font>
-                        </Text>
-                        <Pane fx:id="newPlayerButton" layoutX="255.0" layoutY="296.0" onMouseClicked="#newPlayerButtonPressed" prefHeight="72.0" prefWidth="254.0" styleClass="buttonMode">
-                           <children>
-                              <Text layoutX="35.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="New Player" />
-                           </children>
-                        </Pane>
-                        <Pane layoutX="514.0" layoutY="105.0" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
+                        <Pane fx:id="sequenceButton" layoutX="514.0" layoutY="105.0" onMouseClicked="#sequenceButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
                            <children>
                               <Text layoutX="15.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Sequence" />
                            </children>
                         </Pane>
+                        <TextField layoutX="248.0" layoutY="297.0" prefHeight="72.0" prefWidth="254.0" AnchorPane.leftAnchor="240.0" AnchorPane.rightAnchor="240.0" />
+                        <Text fill="WHITE" layoutX="175.0" layoutY="267.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label" text="Enter your name:" />
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="52.0" layoutY="528.0" prefHeight="108.0" prefWidth="788.0">
                      <children>
-                        <Pane fx:id="modeBackButton" layoutX="69.0" layoutY="18.0" onMouseClicked="#backButtonPressed" prefHeight="72.0" prefWidth="112.0" style="-fx-background-color: red;" styleClass="backForwardButton">
+                        <Pane fx:id="modeBackButton" layoutX="69.0" layoutY="18.0" onMouseClicked="#backButtonPressed" prefHeight="72.0" prefWidth="112.0" styleClass="backButton">
                            <children>
                               <Text layoutX="12.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="backForwardText" text="Back" />
                            </children>
                         </Pane>
-                        <Pane fx:id="modeStartButton" layoutX="626.0" layoutY="18.0" onMouseClicked="#modeStartButtonPressed" prefHeight="72.0" prefWidth="112.0" style="-fx-background-color: #67DD6C;" styleClass="backForwardButton">
+                        <Pane fx:id="modeStartButton" layoutX="626.0" layoutY="18.0" onMouseClicked="#modeStartButtonPressed" prefHeight="72.0" prefWidth="112.0" styleClass="fowardButton">
                            <children>
                               <Text layoutX="10.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="backForwardText" text="Start" />
                            </children>
@@ -203,7 +142,7 @@
                   </Pane>
                   <Pane fx:id="optionsButton" layoutX="250.0" layoutY="438.0" onMouseClicked="#optionsButtonPressed" prefHeight="60.0" prefWidth="187.0" styleClass="menuButton">
                      <children>
-                        <Label alignment="CENTER" layoutX="25.0" layoutY="6.0" prefHeight="40.0" prefWidth="137.0" style="-fx-text-fill: white;" styleClass="whiteMenuText" text="Options" textAlignment="CENTER">
+                        <Label alignment="CENTER" layoutX="25.0" layoutY="6.0" prefHeight="40.0" prefWidth="137.0" style="-fx-text-fill: white;" styleClass="whiteMenuText" text="Mute" textAlignment="CENTER">
                            <font>
                               <Font name="Baloo Bhai" size="30.0" />
                            </font>
