--- a/src/main/resources/view/menu.fxml
+++ b/src/main/resources/view/menu.fxml
@@ -68,58 +68,6 @@
                   </AnchorPane>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="modeAnchorPane">
-               <children>
-                  <AnchorPane layoutX="91.0" layoutY="133.0" prefHeight="432.0" prefWidth="734.0" styleClass="boardAnchorPane" AnchorPane.rightAnchor="91.5">
-                     <children>
-                        <Text fill="WHITE" layoutX="304.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modeText" text="Mode">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Text>
-                        <Pane fx:id="standardModeButton" layoutX="30.0" layoutY="105.0" onMouseClicked="#standardModeButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
-                           <children>
-                              <Text layoutX="16.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Standard ">
-                                 <font>
-                                    <Font size="10.0" />
-                                 </font>
-                              </Text>
-                           </children>
-                        </Pane>
-                        <Pane fx:id="frenzyButton" layoutX="272.5" layoutY="105.0" onMouseClicked="#frenzyButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
-                           <children>
-                              <Text layoutX="39.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Frenzy">
-                                 <font>
-                                    <Font size="8.0" />
-                                 </font>
-                              </Text>
-                           </children>
-                        </Pane>
-                        <Pane fx:id="sequenceButton" layoutX="514.0" layoutY="105.0" onMouseClicked="#sequenceButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
-                           <children>
-                              <Text layoutX="15.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Sequence" />
-                           </children>
-                        </Pane>
-                        <TextField layoutX="248.0" layoutY="297.0" prefHeight="72.0" prefWidth="254.0" AnchorPane.leftAnchor="240.0" AnchorPane.rightAnchor="240.0" />
-                        <Text fill="WHITE" layoutX="175.0" layoutY="267.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label" text="Enter your name:" />
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane layoutX="52.0" layoutY="528.0" prefHeight="108.0" prefWidth="788.0">
-                     <children>
-                        <Pane fx:id="modeBackButton" layoutX="69.0" layoutY="18.0" onMouseClicked="#backButtonPressed" prefHeight="72.0" prefWidth="112.0" styleClass="backButton">
-                           <children>
-                              <Text layoutX="12.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="backForwardText" text="Back" />
-                           </children>
-                        </Pane>
-                        <Pane fx:id="modeStartButton" layoutX="626.0" layoutY="18.0" onMouseClicked="#modeStartButtonPressed" prefHeight="72.0" prefWidth="112.0" styleClass="fowardButton">
-                           <children>
-                              <Text layoutX="10.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="backForwardText" text="Start" />
-                           </children>
-                        </Pane>
-                     </children>
-                  </AnchorPane>
-               </children>
-            </AnchorPane>
             <AnchorPane fx:id="menuAnchorPane" styleClass="background">
                <children>
                   <Pane fx:id="playButton" layoutX="250.0" layoutY="219.0" onMouseClicked="#startButtonPressed" prefHeight="60.0" prefWidth="400.0" styleClass="menuButton">
@@ -160,6 +108,59 @@
                   </Pane>
                   <Text layoutX="101.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titleText" text="Memory    Shape" wrappingWidth="815.22900390625" />
                   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="51.0" layoutX="470.0" layoutY="59.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="51.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="modeAnchorPane">
+               <children>
+                  <AnchorPane layoutX="91.0" layoutY="133.0" prefHeight="432.0" prefWidth="734.0" styleClass="boardAnchorPane" AnchorPane.rightAnchor="91.5">
+                     <children>
+                        <Text fill="WHITE" layoutX="304.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modeText" text="Mode">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Text>
+                        <Pane fx:id="standardModeButton" layoutX="30.0" layoutY="105.0" onMouseClicked="#standardModeButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
+                           <children>
+                              <Text layoutX="16.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Standard ">
+                                 <font>
+                                    <Font size="10.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </Pane>
+                        <Pane fx:id="frenzyButton" layoutX="272.5" layoutY="105.0" onMouseClicked="#frenzyButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
+                           <children>
+                              <Text layoutX="39.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Frenzy">
+                                 <font>
+                                    <Font size="8.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </Pane>
+                        <Pane fx:id="sequenceButton" layoutX="514.0" layoutY="105.0" onMouseClicked="#sequenceButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
+                           <children>
+                              <Text layoutX="15.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Sequence" />
+                           </children>
+                        </Pane>
+                        <TextField fx:id="name_textField" layoutX="248.0" layoutY="297.0" prefHeight="72.0" prefWidth="254.0" AnchorPane.leftAnchor="240.0" AnchorPane.rightAnchor="240.0" />
+                        <Text fill="WHITE" layoutX="258.0" layoutY="274.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label" text="Enter your name:" />
+                        <Text fx:id="error_text" fill="#e11818" layoutX="265.0" layoutY="398.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label" />
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="52.0" layoutY="528.0" prefHeight="108.0" prefWidth="788.0">
+                     <children>
+                        <Pane fx:id="modeBackButton" layoutX="69.0" layoutY="18.0" onMouseClicked="#backButtonPressed" prefHeight="72.0" prefWidth="112.0" styleClass="backButton">
+                           <children>
+                              <Text layoutX="12.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="backForwardText" text="Back" />
+                           </children>
+                        </Pane>
+                        <Pane fx:id="modeStartButton" layoutX="626.0" layoutY="18.0" onMouseClicked="#modeStartButtonPressed" prefHeight="72.0" prefWidth="112.0" styleClass="fowardButton">
+                           <children>
+                              <Text layoutX="10.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="backForwardText" text="Start" />
+                           </children>
+                        </Pane>
+                     </children>
+                  </AnchorPane>
                </children>
             </AnchorPane>
          </children>
