--- a/src/main/resources/view/menu.fxml
+++ b/src/main/resources/view/menu.fxml
@@ -16,52 +16,53 @@
    <children>
       <StackPane layoutX="-3.0" prefHeight="600.0" prefWidth="900.0">
          <children>
-            <AnchorPane fx:id="leaderboardAnchorPane" prefHeight="200.0" prefWidth="200.0" styleClass="background">
+            <AnchorPane fx:id="modeAnchorPane">
                <children>
-                  <Text layoutX="210.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titleText" text="Highscores" wrappingWidth="563.22900390625" />
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="51.0" layoutX="118.0" layoutY="50.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="51.0" />
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="51.0" layoutX="748.0" layoutY="50.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="51.0" />
-                  <AnchorPane layoutX="107.0" layoutY="141.0" prefHeight="432.0" prefWidth="685.0" styleClass="boardAnchorPane">
+                  <AnchorPane layoutX="91.0" layoutY="133.0" prefHeight="432.0" prefWidth="734.0" styleClass="boardAnchorPane" AnchorPane.rightAnchor="91.5">
                      <children>
-                        <Pane layoutX="17.0" layoutY="14.0" prefHeight="39.0" prefWidth="669.0" styleClass="buttonMode" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="14.0">
+                        <Text fill="WHITE" layoutX="152.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modeText" text="Select Game Mode">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Text>
+                        <Pane fx:id="standardModeButton" layoutX="50.0" layoutY="105.0" onMouseClicked="#standardModeButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode" AnchorPane.leftAnchor="50.0">
                            <children>
-                              <Text layoutX="14.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Position">
+                              <Text layoutX="16.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Standard ">
                                  <font>
-                                    <Font name="Baloo Bhai" size="13.0" />
+                                    <Font size="10.0" />
                                  </font>
                               </Text>
-                              <Text layoutX="96.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
-                                 <font>
-                                    <Font name="Baloo Bhai" size="13.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutX="285.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mode">
-                                 <font>
-                                    <Font name="Baloo Bhai" size="13.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutX="475.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score">
-                                 <font>
-                                    <Font name="Baloo Bhai" size="13.0" />
-                                 </font>
-                              </Text>
-                              <Line endX="2.27099609375" endY="25.0" layoutX="76.0" layoutY="14.0" rotate="180.0" startX="2.27099609375" startY="-13.760009765625" />
-                              <Line endX="100.0" endY="19.0" layoutX="168.0" layoutY="21.0" rotate="180.0" startX="100.0" startY="-20.0" />
-                              <Line endX="-9.72900390625" endY="-14.0" layoutX="467.0" layoutY="15.0" startX="-9.72900390625" startY="25.0" />
                            </children>
                         </Pane>
-                        <ScrollPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="60.0">
-                           <content>
-                              <FlowPane fx:id="highscore_flwPane" />
-                           </content>
-                        </ScrollPane>
+                        <Pane fx:id="frenzyButton" layoutX="279.0" layoutY="105.0" onMouseClicked="#frenzyButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
+                           <children>
+                              <Text layoutX="39.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Frenzy">
+                                 <font>
+                                    <Font size="8.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </Pane>
+                        <Pane fx:id="sequenceButton" layoutX="501.0" layoutY="105.0" onMouseClicked="#sequenceButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
+                           <children>
+                              <Text layoutX="15.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Sequence" />
+                           </children>
+                        </Pane>
+                        <TextField fx:id="name_textField" layoutX="248.0" layoutY="297.0" prefHeight="72.0" prefWidth="254.0" AnchorPane.leftAnchor="240.0" AnchorPane.rightAnchor="240.0" />
+                        <Text fill="WHITE" layoutX="258.0" layoutY="274.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label" text="Enter your name:" />
+                        <Text fx:id="error_text" fill="#e11818" layoutX="265.0" layoutY="398.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label" />
                      </children>
                   </AnchorPane>
-                  <AnchorPane layoutX="54.0" layoutY="457.0" prefHeight="200.0" prefWidth="815.0">
+                  <AnchorPane layoutX="52.0" layoutY="528.0" prefHeight="108.0" prefWidth="788.0">
                      <children>
-                        <Pane layoutX="87.0" layoutY="81.0" onMouseClicked="#backButtonPressed" prefHeight="72.0" prefWidth="112.0" styleClass="backButton">
+                        <Pane fx:id="modeBackButton" layoutX="69.0" layoutY="18.0" onMouseClicked="#backButtonPressed" prefHeight="72.0" prefWidth="112.0" styleClass="backButton">
                            <children>
                               <Text layoutX="12.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="backForwardText" text="Back" />
+                           </children>
+                        </Pane>
+                        <Pane fx:id="modeStartButton" layoutX="626.0" layoutY="18.0" onMouseClicked="#modeStartButtonPressed" prefHeight="72.0" prefWidth="112.0" styleClass="fowardButton">
+                           <children>
+                              <Text layoutX="10.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="backForwardText" text="Start" />
                            </children>
                         </Pane>
                      </children>
@@ -110,53 +111,52 @@
                   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="51.0" layoutX="470.0" layoutY="59.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="51.0" />
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="modeAnchorPane">
+            <AnchorPane fx:id="leaderboardAnchorPane" prefHeight="200.0" prefWidth="200.0" styleClass="background">
                <children>
-                  <AnchorPane layoutX="91.0" layoutY="133.0" prefHeight="432.0" prefWidth="734.0" styleClass="boardAnchorPane" AnchorPane.rightAnchor="91.5">
+                  <Text layoutX="210.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="titleText" text="Highscores" wrappingWidth="563.22900390625" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="51.0" layoutX="118.0" layoutY="50.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="51.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="51.0" layoutX="748.0" layoutY="50.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" styleClass="logo" width="51.0" />
+                  <AnchorPane layoutX="107.0" layoutY="141.0" prefHeight="432.0" prefWidth="685.0" styleClass="boardAnchorPane">
                      <children>
-                        <Text fill="WHITE" layoutX="304.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modeText" text="Mode">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Text>
-                        <Pane fx:id="standardModeButton" layoutX="30.0" layoutY="105.0" onMouseClicked="#standardModeButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
+                        <Pane layoutX="17.0" layoutY="14.0" prefHeight="39.0" prefWidth="669.0" styleClass="leaderBoard" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="14.0">
                            <children>
-                              <Text layoutX="16.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Standard ">
+                              <Text layoutX="14.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Position">
                                  <font>
-                                    <Font size="10.0" />
+                                    <Font name="Baloo Bhai" size="13.0" />
                                  </font>
                               </Text>
-                           </children>
-                        </Pane>
-                        <Pane fx:id="frenzyButton" layoutX="272.5" layoutY="105.0" onMouseClicked="#frenzyButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
-                           <children>
-                              <Text layoutX="39.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Frenzy">
+                              <Text layoutX="96.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
                                  <font>
-                                    <Font size="8.0" />
+                                    <Font name="Baloo Bhai" size="13.0" />
                                  </font>
                               </Text>
+                              <Text layoutX="285.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mode">
+                                 <font>
+                                    <Font name="Baloo Bhai" size="13.0" />
+                                 </font>
+                              </Text>
+                              <Text layoutX="475.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score">
+                                 <font>
+                                    <Font name="Baloo Bhai" size="13.0" />
+                                 </font>
+                              </Text>
+                              <Line endX="2.27099609375" endY="25.0" layoutX="76.0" layoutY="14.0" rotate="180.0" startX="2.27099609375" startY="-13.760009765625" />
+                              <Line endX="100.0" endY="19.0" layoutX="168.0" layoutY="21.0" rotate="180.0" startX="100.0" startY="-20.0" />
+                              <Line endX="-9.72900390625" endY="-14.0" layoutX="467.0" layoutY="15.0" startX="-9.72900390625" startY="25.0" />
                            </children>
                         </Pane>
-                        <Pane fx:id="sequenceButton" layoutX="514.0" layoutY="105.0" onMouseClicked="#sequenceButtonPressed" prefHeight="84.0" prefWidth="190.0" styleClass="buttonMode">
-                           <children>
-                              <Text layoutX="15.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="whiteMenuText" text="Sequence" />
-                           </children>
-                        </Pane>
-                        <TextField fx:id="name_textField" layoutX="248.0" layoutY="297.0" prefHeight="72.0" prefWidth="254.0" AnchorPane.leftAnchor="240.0" AnchorPane.rightAnchor="240.0" />
-                        <Text fill="WHITE" layoutX="258.0" layoutY="274.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label" text="Enter your name:" />
-                        <Text fx:id="error_text" fill="#e11818" layoutX="265.0" layoutY="398.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label" />
+                        <ScrollPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="60.0">
+                           <content>
+                              <FlowPane fx:id="highscore_flwPane" />
+                           </content>
+                        </ScrollPane>
                      </children>
                   </AnchorPane>
-                  <AnchorPane layoutX="52.0" layoutY="528.0" prefHeight="108.0" prefWidth="788.0">
+                  <AnchorPane layoutX="54.0" layoutY="457.0" prefHeight="200.0" prefWidth="815.0">
                      <children>
-                        <Pane fx:id="modeBackButton" layoutX="69.0" layoutY="18.0" onMouseClicked="#backButtonPressed" prefHeight="72.0" prefWidth="112.0" styleClass="backButton">
+                        <Pane layoutX="87.0" layoutY="81.0" onMouseClicked="#backButtonPressed" prefHeight="72.0" prefWidth="112.0" styleClass="backButton">
                            <children>
                               <Text layoutX="12.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="backForwardText" text="Back" />
-                           </children>
-                        </Pane>
-                        <Pane fx:id="modeStartButton" layoutX="626.0" layoutY="18.0" onMouseClicked="#modeStartButtonPressed" prefHeight="72.0" prefWidth="112.0" styleClass="fowardButton">
-                           <children>
-                              <Text layoutX="10.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="backForwardText" text="Start" />
                            </children>
                         </Pane>
                      </children>
